Full Stack JavaScript/JavaScript/restaurant-page/src/style.css
:root {
  font-size: 62.5%;

  /* Main colors */
  --BG_COLOR: rgb(236, 216, 228);
  --BAM_RED: rgb(180, 40, 40);
  --BAM_PINK: rgba(255, 0, 0, 0.1);
  --BORDER_LIGHT: 1px solid rgba(0, 0, 0, 0.2);

  /* Text */
  --TEXT_SHADOW: 1px 1px 1px black;
}

/******************************************
/* BASE STYLES
/*******************************************/

* {
  margin: 0;
  padding: 0;
  border: 0;
  list-style: none;
  outline: none;
  box-sizing: border-box;
  line-height: 1.5;
  font-size: 1.6rem; /* Set default back to 16px for fallback */
}

body {
  background-color: var(--BG_COLOR);
}

/******************************************
/* TEXT
/*******************************************/

@font-face {
  font-family: 'Rampart';
  font-weight: 400;
  font-style: normal;
  src: url(./font/RampartOne-Regular.ttf);
}

@font-face {
  font-family: 'BalooBhai';
  font-weight: 400;
  font-style: normal;
  src: url(./font/BalooBhai2.ttf);
}

h1 {
  text-align: center;
  line-height: 1.2;
  font-family: 'Rampart';
  font-size: clamp(4.6rem, 1rem + 10vw, 12rem);
  color: var(--BAM_RED);
  text-shadow: var(--TEXT_SHADOW);
  user-select: none;
}

h2 {
  font-family: 'Rampart';
  font-size: clamp(4.4rem, 5vw, 6rem);
  transform: rotate(-2deg);
  color: var(--BAM_RED);
  text-shadow: var(--TEXT_SHADOW);
  text-align: center;
  user-select: none;
}

p {
  font-size: 2.6rem;
  padding: 0 20px;
}


/******************************************
/* HEADER
/*******************************************/

nav {
  display: flex;
  justify-content: space-between;
  padding-top: 20px;
  margin: 0 4px;

  & button {
    width: 33%;
    background-color: white;
    font-size: clamp(3rem, 1rem + 3vw, 4.6rem);
    font-family: 'BalooBhai';
    font-weight: 600;
    border-radius: 3px;
    border: var(--BORDER_LIGHT);
    transition: all 600ms;
  }

  & button:hover {
    background-color: var(--BAM_RED);
    color: white;
  }

  & .active {
    background-color: var(--BAM_RED);
    color: white;
    border-bottom: 5px solid black;
    margin-bottom: -5px;
  }
}

/******************************************
/* CONTENT
/*******************************************/


#content {
  display: flex;
  justify-content: center; /* justify and align centers for smaller screens */
  align-items: center;
  max-width: 1400px;
  margin: 40px auto;
  font-family: 'BalooBhai';
  white-space: pre-line; /* Make sure linebreaks work! */

  & > div { /* every container inside content */
    width: 94vw;
    border-radius: 4px;
    display: grid;
  }
}

.img-container {
  display: flex;
  align-items: center;
  justify-content: center;
  /* adjust grid area in individual components */

  & img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
  }
}



/******************************************
/* ABOUT
/*******************************************/

.about-container {
  background-color: var(--BAM_PINK);
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
  grid-template-rows: 150px repeat(3, auto);
  border: var(--BORDER_LIGHT);

  & .about-title { /* h2 */
    grid-area: 1 / 1 / 2 / 5;
    padding-top: 10px;
    height: 50%;
  }

  & .about-info {
    grid-area: 2 / 1 / 3 / 5;
    padding: 0 20px;
  }

  & .img-container {
    grid-area: 3 / 2 / 4 / 4;
  }

  & .review-container {
    grid-area: 4 / 1 / 5 / 5;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    padding: 20px 0;
    border-top: var(--BORDER_LIGHT);

    & > .about-review {
      font-size: 3rem;
      text-align: center;      
    }
  }


  /* MEDIA QUERIES */
  @media screen and (max-width: 900px) {
    & .about-review { width: 50%; padding-top: 30px;}
  }
  
  @media screen and (max-width: 700px) {
    & .about-info       { grid-area: 2 / 1 / 3 / 5; }
    & .img-container    { grid-area: 3 / 1 / 4 / 5; }
    & .about-review     { width: 100%; }
  }
}

/******************************************
/* MENU
/*******************************************/

.menu-container {
  gap: 40px;

  & .menu-item {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    background-color: var(--BAM_PINK);
    border: var(--BORDER_LIGHT);

    & > div {
      padding: 20px;
    }
  }

  & .menu-info {
    display: flex;
    flex-direction: column;

    & .item-name { /* h2 */
        font-size: clamp(5rem, 5vw, 5.5rem);
        transform: rotate(-3deg);
    }

    & p {
      padding-top: 20px;
    }

    & .item-ingredients {
      border-top: var(--BORDER_LIGHT);
      font-size: 2rem;
      text-align: right;
      opacity: 0.6;
    }

    & .item-calories {
      font-size: 2rem;
      text-align: right;
      padding-top: 10px;
      color: var(--BAM_RED);
    }
  }

  
  /* EVERY OTHER DIV WILL HAVE THE INFO AND IMAGES POSITION SWAPPED */
  /* INFO LEFT - IMAGE RIGHT */
  & .menu-info      { grid-area: 1 / 1 / 3 / 2; }
  & .img-container  { grid-area: 1 / 2 / 3 / 3; }

  /* IMAGE LEFT - INFO RIGHT */
  & .menu-item:nth-child(even) > .menu-info     { grid-area: 1 / 2 / 3 / 3; }  
  & .menu-item:nth-child(even) > .img-container { grid-area: 1 / 1 / 3 / 2; }


  /* MEDIA QUERIES */
  @media screen and (max-width: 850px) {
    & .menu-item      { grid-template-columns: 1fr; }
    & .menu-info      { grid-area: 1 / 1 / 2 / 2 !important; } /* important is added to not rewrite the above .menu-items */
    & .img-container  { grid-area: 2 / 1 / 3 / 3 !important; }
  }
}

/******************************************
/* CONTACT
/*******************************************/

.contact-container {
  gap: 20px;
  
  & .contact-item {
    display: flex;
    flex-direction: column;
    background-color: var(--BAM_PINK);
    border: var(--BORDER_LIGHT);
  }

  /* & h2 {
    font-size: clamp(3rem, 5rem + 0.5vw, 6rem);
  } */
  
  & span {
    padding: 10px 0;
    font-size: 2.4rem;
    text-align: center;
  }
}

